[tool.poetry]
name = "reinhartrecords"
version = "0.1.0"
description = "Django Logging App to peruse all your coding woes."
authors = ["johncartergonzalez <unmrf0ngh@mozmail.com>"]
readme = "README.org"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.6"
mypy = "^1.6.1"
requests = "^2.31.0"
python-dotenv = "^1.0.0"


[tool.poetry.dev-dependencies]
black = "^22.8.0"
pytest = "^7.1.3"
flake8 = "^5.0.4"
pylint = "^2.15.2"

[tool.poetry.scripts]
app = 'app:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
